--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Assignment1</title>
 </head>
-
 <body>
-
+    <section class="flexible-container">
+        <div class="half-width">
+            <img src="images/donation4.jpg" alt="victims">
+        </div>
+        <div>
+            <h1>Let's Help Those Who Are</h1>
+            <h1>More In Need</h1>
+        </div>
+    </section>
 </body>
-
+<footer><br>
+    <h1><span class="orange-color">Be Humble</span></h1><br>
+    <h4><span class="white-color">I'm gonna do it.</span></h4>
+</footer>
 </html>
