--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Assignment1</title>
 </head>
@@ -17,9 +18,11 @@
         <div class="half-width">
             <img src="images/donation4.jpg" alt="victims">
         </div>
-        <div>
+        <div class="words white-color">
             <h1>Let's Help Those Who Are</h1>
             <h1>More In Need</h1>
+            <p>The flood condition in Sunamgonj has surpassed all the previous records.</p>
+            <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">Donate Now</a>
         </div>
     </section>
 </body>
