--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Assignment1</title>
 </head>
 <body>
-    <section class="flexible-container">
+    <!-- <section class="flexible-container">
         <div class="half-width">
             <img src="images/donation4.jpg" alt="victims">
         </div>
@@ -24,10 +24,62 @@
             <p>The flood condition in Sunamgonj has surpassed all the previous records.</p>
             <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">Donate Now</a>
         </div>
+    </section> -->
+    <!-- <section class="second-row">
+        <div>
+            <h1>Donate Today</h1>
+            <p>The flood victims are looking forward to your helping hands and they need it now.</p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h1>Our Donate Plan</h1>
+            <p>We are planning to donate your donations through these channels.</p>
+        </div>
+    </section> -->
+    <section class="flexible-container">
+        <div>
+            <div>
+                <h1>Their lives depend on</h1>
+                <h1>your donation</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aut voluptas earum numquam qui deserunt repellendus eos aliquam perspiciatis magnam?</p><br>
+                <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">How to Contribute?</a>
+            </div>
+        </div>
+        <div>
+            <img src="images/donation11.jpg" alt="Showcase">
+        </div>
+    </section>
+    <section class="flexible-container">
+        <div><div>
+            <img src="images/donation12.png" alt="Showcase">
+        </div></div>
+        <div>
+            <div class="align-right">
+                <h1>They need us</h1>
+                <h1>to survive</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aut voluptas earum numquam qui deserunt repellendus eos aliquam perspiciatis magnam?</p><br>
+                <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">How to Contribute?</a>
+            </div>
+        </div>
+    </section>
+    <section class="last">
+        <div class="updates">
+            <h1>Get My Updates</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere a placeat ipsam, nemo iste eligendi.</p>
+        </div>
+        <div class="validation">
+            <form>
+                <input placeholder="Email" type="email" id="email" name="Email">
+                <a class="linked-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">Subscribe</a>
+            </form>
+        </div>
     </section>
 </body>
 <footer><br>
-    <h1><span class="orange-color">Be Humble</span></h1><br>
-    <h4><span class="white-color">I'm gonna do it.</span></h4>
+    <div>
+        <h1><span class="orange-color">Be Humble</span></h1><br>
+        <h4><span class="white-color">I'm gonna do it.</span></h4>
+    </div>
 </footer>
 </html>
