--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Assignment1</title>
 </head>
@@ -37,6 +37,25 @@
             <p>We are planning to donate your donations through these channels.</p>
         </div>
     </section> -->
+    <section>
+        <div class="divide">
+            <div id="left">
+                <div>
+                    <img src="icons/food.png" alt="">
+                </div>
+            </div>
+            <div id="middle">
+                <div>
+                    <img src="icons/shelter.png" alt="">
+                </div>
+            </div>
+            <div id="right">
+                <div>
+                    <img src="icons/Frame-1.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="flexible-container">
         <div>
             <div>
