--- a/index.html
+++ b/index.html
@@ -43,15 +43,30 @@
                 <div>
                     <img src="icons/food.png" alt="">
                 </div>
+                <br>
+                <div class="left">
+                    <h1>Food for a family</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, rem.</p>
+                </div>
             </div>
             <div id="middle">
                 <div>
                     <img src="icons/shelter.png" alt="">
                 </div>
+                <br>
+                <div class="left">
+                    <h1>Shelter for a family</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, sunt.</p>
+                </div>
             </div>
             <div id="right">
                 <div>
                     <img src="icons/Frame-1.png" alt="">
+                </div>
+                <br>
+                <div class="left">
+                    <h1>Education for a child</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem!</p>
                 </div>
             </div>
         </div>
