--- a/index.html
+++ b/index.html
@@ -14,30 +14,68 @@
     <title>Assignment1</title>
 </head>
 <body>
-    <!-- <section class="flexible-container">
-        <div class="half-width">
-            <img src="images/donation4.jpg" alt="victims">
-        </div>
-        <div class="words white-color">
+    <section>
+        <div class="initial">
             <h1>Let's Help Those Who Are</h1>
             <h1>More In Need</h1>
-            <p>The flood condition in Sunamgonj has surpassed all the previous records.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, nostrum. Tenetur repellendus est voluptate asperiores quibusdam eveniet a quas blanditiis?</p>
             <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">Donate Now</a>
-        </div>
-    </section> -->
-    <!-- <section class="second-row">
-        <div>
-            <h1>Donate Today</h1>
-            <p>The flood victims are looking forward to your helping hands and they need it now.</p>
         </div>
     </section>
     <section>
         <div>
-            <h1>Our Donate Plan</h1>
-            <p>We are planning to donate your donations through these channels.</p>
+            <div class="donate">
+                <h1>Donate Today</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur in impedit aspernatur ipsum id?</p>
+            </div>
         </div>
-    </section> -->
+        <div class="divided">
+            <div id="first">
+                <div class="right">
+                    <h1>100tk</h1>
+                </div>
+            </div>
+            <div id="second">
+                <div class="right">
+                    <h1>200tk</h1>
+                </div>
+            </div>
+            <div id="third">
+                <div class="right">
+                    <h1>500tk</h1>
+                </div>
+            </div>
+            <div id="fourth">
+                <div class="right">
+                    <h1>1000tk</h1>
+                </div>
+            </div>
+            <div id="fifth">
+                <div class="right">
+                    <h1>5000tk</h1>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div>
+            <form class="aligned-center">
+                <input placeholder="Other Amount (taka)" type="number" id="input" name="number">
+            </form>
+        </div>
+        <div class="align-center">
+            <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">Donate Now</a>
+        </div>
+        <br>
+    </section>
+    <br><br><br>
     <section>
+        <div>
+            <div class="donate">
+                <h1>Our Donate Plan</h1>
+                <p>We are planning to donate your donations through these channels.</p>
+            </div>
+        </div>
+        <br>
         <div class="divide">
             <div id="left">
                 <div>
