might change later

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <br>
         <div>
             <form class="aligned-center">
-                <input placeholder="Other Amount (taka)" type="number" id="input" name="number">
+                <input placeholder="Other Amount (taka)" type="currency" id="input" name="currency">
             </form>
         </div>
         <div class="align-center">
@@ -75,7 +75,7 @@
                 <p>We are planning to donate your donations through these channels.</p>
             </div>
         </div>
-        <br>
+        <br><br>
         <div class="divide">
             <div id="left">
                 <div>
@@ -125,7 +125,8 @@
     <section class="flexible-container">
         <div><div>
             <img src="images/donation12.png" alt="Showcase">
-        </div></div>
+            </div>
+        </div>
         <div>
             <div class="align-right">
                 <h1>They need us</h1>
