--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="initial">
             <h1>Let's Help Those Who Are</h1>
             <h1>More In Need</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, nostrum. Tenetur repellendus est voluptate asperiores quibusdam eveniet a quas blanditiis?</p>
+            <p>The flood condition in Sunamgonj has surpassed all the records of previous. Almost all the urban areas are now submerged under water. People are hardly finding any place to hide let alone stay.</p>
             <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">Donate Now</a>
         </div>
     </section>
@@ -26,7 +26,7 @@
         <div>
             <div class="donate">
                 <h1>Donate Today</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur in impedit aspernatur ipsum id?</p>
+                <p>Donate whatever amount is possible for you.</p>
             </div>
         </div>
         <div class="divided">
@@ -84,7 +84,7 @@
                 <br>
                 <div class="left">
                     <h1>Food for a family</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, rem.</p>
+                    <p>We will provide food to the victims both cooked and non-cooked.</p>
                 </div>
             </div>
             <div id="middle">
@@ -94,7 +94,7 @@
                 <br>
                 <div class="left">
                     <h1>Shelter for a family</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, sunt.</p>
+                    <p>We will rebuild homes for the homeless and provide necessary day-to-day essentials.</p>
                 </div>
             </div>
             <div id="right">
@@ -104,22 +104,24 @@
                 <br>
                 <div class="left">
                     <h1>Education for a child</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, exercitationem!</p>
+                    <p>We will bair all the expenses of both school going and non-school going children.</p>
                 </div>
             </div>
         </div>
     </section>
     <section class="flexible-container">
         <div>
-            <div>
+            <div class="half-width">
                 <h1>Their lives depend on</h1>
                 <h1>your donation</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aut voluptas earum numquam qui deserunt repellendus eos aliquam perspiciatis magnam?</p><br>
+                <p>They are waiting for your donations to live another day. Every single day is a day of new struggle to them.</p><br>
                 <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">How to Contribute?</a>
             </div>
         </div>
         <div>
-            <img src="images/donation11.jpg" alt="Showcase">
+            <div>
+                <img src="images/donation11.jpg" alt="Showcase">
+            </div>
         </div>
     </section>
     <section class="flexible-container">
@@ -131,7 +133,7 @@
             <div class="align-right">
                 <h1>They need us</h1>
                 <h1>to survive</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aut voluptas earum numquam qui deserunt repellendus eos aliquam perspiciatis magnam?</p><br>
+                <p>Without your donations, they will not go a single day. They are totally hopeless.</p><br>
                 <a class="link-button" target="_blank" href="https://linkedin.com/in/RahadBinAlIslam">How to Contribute?</a>
             </div>
         </div>
@@ -139,7 +141,7 @@
     <section class="last">
         <div class="updates">
             <h1>Get My Updates</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere a placeat ipsam, nemo iste eligendi.</p>
+        <p>For further updates, subscribe with your email below.</p>
         </div>
         <div class="validation">
             <form>
